# BIT-SoftwareEngineering-3-2

./: README.md
操作系统/: Experiment1.cpp  Experiment2.cpp  Experiment3.cpp  Experiment5.cpp  实验1.md  实验2.md  实验3.md  实验5.md
操作系统/Experiment4/: CMakeLists.txt  main.cpp  使用说明.md  实验报告.md
操作系统/作业/: 1120221303 俞乐楠 作业1- 操作系统概述.docx
操作系统/参考试题/: 2016-2017第一学期操作系统期末试题.pages  好东西.pages  操作系统试卷.pages  计算机操作系统期末考试试卷.pages  （大题很值得做）2004级《操作系统》期末试题（A卷）.pages
操作系统/实验/: 操作系统实验一.html  操作系统实验三.html  操作系统实验四.html
操作系统/课件/: Operating System -Lecture1 操作系统概述.ppt  Operating System -Lecture10 连续存储管理、页式管理.ppt  Operating System -Lecture11 段式存储管理与虚存.ppt  Operating System -Lecture12 页面替换策略.ppt  Operating System -Lecture13 文件与文件目录.ppt  Operating System -Lecture14 文件系统.ppt  Operating System -Lecture15 设备控制使用方法.ppt  Operating System -Lecture16 设备管理、磁盘设备.ppt  Operating System -Lecture17分布式RPC.pptx  Operating System -Lecture18 Linux存储器管理.ppt  Operating System -Lecture2 操作系统历史与现状.ppt  Operating System -Lecture3 操作系统结构与界面.ppt  Operating System -Lecture4 进程描述与状态.ppt  Operating System -Lecture5 进程的控制与调度.ppt  Operating System -Lecture6 进程的并发执行问题.ppt  Operating System -Lecture7 进程同步与互斥实现方法.ppt  Operating System -Lecture8 进程的通信.ppt  Operating System -Lecture9 进程的死锁.ppt  操作系统习题课.ppt
编译原理/作业/: 作业1.docx
编译原理/实验1/: CMakeLists.txt  codegen.h  lexer.l  main.cpp  parser.cpp  parser.h
编译原理/实验1/lab1测试样例/: e02.ans  e03.ans  e04.ans  e05.ans  e07.ans  e07.c  e08.ans  e08.c
编译原理/李鹏课件PPT/: c1.pptx  cp2_1.pptx  cp2_2.pptx  cp2_3.pptx  cp3.pptx  cp4.pptx  cp5-12.pptx  cp5-3456.pptx  cp5-78910.pptx  cp6.pptx  (+2 more)
(+1 files in other folders)
